k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: highland-tower
  labels:
    name: highland-tower
    project: gcpanel
